compiler-core/src/parse/snapshots/glistix_core__parse__tests__glistix_external_nix_attribute_on_type_variant.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype Wibble {\n    @external(nix, \"one.nix\", \"two\")\n    Wibble1\n}\n"
---
----- SOURCE CODE

type Wibble {
    @external(nix, "one.nix", "two")
    Wibble1
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     @external(nix, "one.nix", "two")
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This attribute cannot be used on a variant.

Hint: Did you mean `@deprecated`?
